@@ -670,6 +670,7 @@ public class SourceLauncherTest extends TestRunner {
         tb.writeJavaFiles(base, "public class Main { public static void main(String... args) {}}");
         String log = new JavaTask(tb)
                 .vmOptions("--source", "21")
+                .includeStandardOptions(false) // Do not inherit --enable-preview
                 .className(base.resolve("Main.java").toString())
                 .run(Task.Expect.SUCCESS)
                 .getOutput(Task.OutputKind.STDERR);
